@@ -9,7 +9,7 @@ SYNOPSIS
 --------
 ----
 //  Callback function for reactor events
-typedef int (zloop_fn) (zloop_t *loop, void *socket, void *arg);
+typedef int (zloop_fn) (zloop_t *loop, zmq_pollitem_t *item, void *arg);
 
 //  Create a new zloop reactor
 zloop_t *
@@ -21,11 +21,11 @@ void
 
 //  Register a socket reader, on one socket
 int
-    zloop_reader (zloop_t *self, void *socket, zloop_fn handler, void *arg);
+    zloop_reader (zloop_t *self, zmq_pollitem_t *item, zloop_fn handler, void *arg);
 
 //  Cancel the reader on the specified socket, if any
 void
-    zloop_cancel (zloop_t *self, void *socket);
+    zloop_cancel (zloop_t *self, zmq_pollitem_t *item);
 
 //  Register a timer that will go off after 'delay' msecs, and will
 //  repeat 'times' times, unless 'times' is zero, meaning repeat forever.
@@ -50,7 +50,7 @@ DESCRIPTION
 -----------
 
 The zloop class provides an event-driven reactor pattern. The reactor
-handles socket readers (not writers in the current implementation), and
+handles zmq_pollitem_t items (pollers or writers, sockets or fds), and
 once-off or repeated timers. Its resolution is 1 msec. It uses a tickless
 timer to reduce CPU interrupts in inactive processes.
 
@@ -73,7 +73,8 @@ EXAMPLE
     //  After 10 msecs, send a ping message to output
     zloop_timer (loop, 10, 1,  s_timer_event, output);
     //  When we get the ping message, end the reactor
-    zloop_reader (loop, input, s_socket_event, NULL);
+    zmq_pollitem_t poll_input = { input, 0, ZMQ_POLLIN, 0 };
+    zloop_poller (loop, &poll_input, s_socket_event, NULL);
     zloop_start (loop);
 
     zloop_destroy (&loop);
