@@ -17,7 +17,7 @@ old_library='libczmq.a'
 inherited_linker_flags=''
 
 # Libraries that this one depends upon.
-dependency_libs=' -lm -lzmq -lpthread'
+dependency_libs=' -lm /usr/local/lib/libzmq.la -luuid -lrt -lpthread'
 
 # Names of additional weak libraries provided by this library
 weak_library_names=''
